2014-10-16  Andrew MacLeod  <amacleod@redhat.com>

	* g++.dg/plugin/pragma_plugin.c: Adjust include files.

2014-10-16  Martin Liska  <mliska@suse.cz>

	* g++.dg/ipa/ipa-icf-4.C: Correct number of equivalences set.
	* g++.dg/ipa/ipa-icf-5.C: Likewise

2014-10-16  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/63260
	* gcc.target/sh/pr63260.c: Fix typo __builtin_fabs vs. __builtin_abs.

2014-10-16  Richard Biener  <rguenther@suse.de>

	PR middle-end/63554
	* gcc.dg/torture/pr63554.c: New testcase.

2014-10-16  Marek Polacek  <polacek@redhat.com>

	* gcc.target/powerpc/pr58673-1.c: Fix defaulting to int.
	* gcc.target/powerpc/pr58673-2.c: Add declarations.

2014-10-16  Marek Polacek  <polacek@redhat.com>

	* gcc.dg/graphite/id-1.c: Fix defaulting to int.
	* gcc.dg/graphite/id-2.c: Likewise.
	* gcc.dg/graphite/id-4.c: Likewise.
	* gcc.dg/graphite/id-8.c: Likewise.
	* gcc.dg/graphite/id-pr45230-1.c: Likewise.
	* gcc.dg/graphite/id-pr45230.c: Likewise.
	* gcc.dg/graphite/id-pr45231.c: Likewise.
	* gcc.dg/graphite/pr38073.c: Likewise.
	* gcc.dg/graphite/pr38125.c: Likewise.
	* gcc.dg/graphite/pr38409.c: Likewise.
	* gcc.dg/graphite/pr38413.c: Likewise.
	* gcc.dg/graphite/pr38510.c: Likewise.
	* gcc.dg/graphite/pr38786.c: Likewise.
	* gcc.dg/graphite/pr39260.c: Likewise.
	* gcc.dg/graphite/scop-19.c: Likewise.
	* gcc.dg/graphite/id-13.c: Fix implicit declarations.
	* gcc.dg/graphite/id-17.c: Likewise.
	* gcc.dg/graphite/id-23.c: Likewise.
	* gcc.dg/graphite/id-26.c: Likewise.
	* gcc.dg/graphite/id-pr43464-1.c: Likewise.
	* gcc.dg/graphite/pr37485.c: Likewise.
	* gcc.dg/graphite/pr38500.c: Likewise.
	* gcc.dg/graphite/pr42284.c: Likewise.
	* gcc.dg/graphite/pr42914.c: Likewise.
	* gcc.dg/graphite/pr46404-1.c: Likewise.
	* gcc.dg/graphite/pr60979.c: Likewise.
	* gcc.dg/graphite/id-pr43464.c: Fix implicit declarations and
	defaulting to int.

2014-10-16  Martin Liska  <mliska@suse.cz>
	    Jan Hubicka  <hubicka@ucw.cz>

	* g++.dg/ipa/ipa-icf-1.C: New test.