@@ -1,3 +1,8 @@
+2014-10-16  Martin Liska  <mliska@suse.cz>
+
+	* asan/Makefile.am: IPA ICF pass is disabled.
+	* asan/Makefile.in: Likewise.
+
 2014-10-14  David S. Miller  <davem@davemloft.net>
 
 	* sanitizer_common/sanitizer_platform_limits_linux.cc (time_t):
